--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,11 @@ edition = "2024"
 faer = { version = "0.23.2", features = ["linalg"] }
 hashbrown = "0.16"
 rayon = "1.11.0"
-rand = "*"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+rmp-serde = "1.3.0"
+
+clap = { version = "4.5.54", features = ["derive"] }
 
 
 [profile.release]
