--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-faer = { version = "0.23.2", features = ["linalg"] }
+faer = { version = "0.23.2", features = ["linalg", "perf-warn"] }
 hashbrown = { version = "0.16", features = ["serde"] }
 rayon = "1.11.0"
 serde = { version = "1.0", features = ["derive"] }
@@ -16,5 +16,5 @@ fastapprox = "0.3.1"
 [profile.release]
 debug = "line-tables-only"
 opt-level = 3
-lto = "fat"
+lto = true
 codegen-units = 1
