--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ serde_json = "1.0"
 rmp-serde = "1.3.0"
 clap = { version = "4.5.54", features = ["derive"] }
 fastapprox = "0.3.1"
+log = "0.4"
+simplelog = { version = "0.12.2", features = ["paris"] }
 
 [profile.release]
 debug = "line-tables-only"
