--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ clap = { version = "4.5.54", features = ["derive"] }
 fastapprox = "0.3.1"
 log = "0.4"
 simplelog = { version = "0.12.2", features = ["paris"] }
+time = { version = "0.3", features = ["macros"] }
 
 [profile.release]
 debug = "line-tables-only"
